# MathDialect

./: .gitignore  README.md
MathDialect/: CMakeLists.txt
MathDialect/include/: CMakeLists.txt  MathDialect.h  MathDialect.td  MathOps.h  MathOps.td  MathOps2.td
MathDialect/lib/: CMakeLists.txt  MathDialect.cpp  MathOpp2.cpp  MathOps.cpp
MathDialect/math-opt/: CMakeLists.txt  math-opt.cpp
MathDialect/tests/: test_add.mlir  test_constant.mlir  test_fold.mlir  test_fold_2.mlir  test_splat.mlir  test_sub.mlir
MathDialect/tools/: CMakeLists.txt  math-opt.cpp
